--- a/Sprite.razor
+++ b/Sprite.razor
@@ -2,6 +2,8 @@
 
 <Styled @bind-Classname="@SpriteStyle">
     background-image: url('@ImageUrl');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;   
     width: @WidthStyle;
     height: @HeightStyle;
     position: @Position;
@@ -11,6 +13,8 @@
     transform-origin: left;
     display: @Display;
     opacity: @Opacity;
+    transform: rotate(@RotationStyle);
+    z-index: @ZIndex;
 </Styled>
 
 <div class="@SpriteStyle">
