--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -50,6 +50,7 @@
     margin-bottom: 1vh;
     width: @WidthPercent;
     height: @HeightPercent;
+    z-index: @ZIndex;
 </Styled>
 
 <div class="@ValidationControlStyle">
