--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -11,6 +11,7 @@
     top: @TopStyle;
     vertical-align: top;
     left: @LeftStyle;
+    font-size: @LabelFontSizeStyle;
 </Styled>
 <Styled @bind-Classname="@TextBoxStyle">
     background-color: @TextBoxBackColor;
@@ -50,7 +51,7 @@
     margin-bottom: 1vh;
     width: @WidthPercent;
     height: @HeightPercent;
-    z-index: @ZIndex;
+    z-index: @ZIndex;    
 </Styled>
 
 <div class="@ValidationControlStyle">
