--- a/Grid.razor
+++ b/Grid.razor
@@ -1,4 +1,4 @@
-﻿@namespace Goals.Components
+﻿@namespace DataJuggler.Blazor.Components
 @using DataJuggler.UltimateHelper
 @using DataJuggler.Excelerate;
 
@@ -13,7 +13,7 @@
 {
     // iterate each column
     foreach (Column column in Columns)
-    {  
+    {
         <div class="@column.ClassName">@column.ColumnName</div>
     }
 }
@@ -30,9 +30,17 @@
 
             @foreach (Column column in row.Columns)
             {
-                <div class="@column.ClassName">@column.ColumnText</div>
+                if (row.EditMode)
+                {
+                    
+                }
+                else
+                {
+                    <div class="@column.ClassName" @ondblclick="() => OnDoubleClick(row)">@column.ColumnText</div>
+                }
             }
             </div>
+
             <br />
         }
     }
