--- a/Grid.razor
+++ b/Grid.razor
@@ -19,6 +19,7 @@
     }
 }
 
+<div class="@ClassName">
 @if (HasRows)
 {  
 
@@ -49,10 +50,9 @@
 
             <br />
         }
-    }
-    
+    }    
 }
-
+</div>
 
 
 
