--- a/Grid.razor
+++ b/Grid.razor
@@ -35,10 +35,10 @@
                 
                 if ((row.EditMode) && (!column.ReadOnly))
                 {
-                    <div class="displayinline">
+                    <div class="displayinline right16 up16">
                     <ValidationComponent Name=column.ColumnName Width=column.Width Height=column.Height 
                         RowId=row.Id ColumnId=column.Id ZIndex="20" SetFocusOnFirstRender=column.SetFocusOnFirstRender
-                        Parent=this></ValidationComponent>
+                        Text="@column.ColumnText"  Parent=this></ValidationComponent>
                     </div>
                 }
                 else
