I updated the ValidationComponent.

--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -52,6 +52,7 @@
     width: @WidthPercent;
     height: @HeightPercent;
     z-index: @ZIndex;    
+    display: @DisplayStyle;
 </Styled>
 
 <div class="@ValidationControlStyle @ClassName">
