I updated the Grid to use Column.EditorText.

--- a/Grid.razor
+++ b/Grid.razor
@@ -38,7 +38,7 @@
                     <div class="displayinline right128 up64">
                     <ValidationComponent Name=column.ColumnName Width=column.Width Height=column.Height 
                         RowId=row.Id ColumnId=column.Id ZIndex="20" SetFocusOnFirstRender=column.SetFocusOnFirstRender
-                        Text="@column.ColumnText"  Parent=this></ValidationComponent>
+                        Text="@column.EditorText"  Parent=this></ValidationComponent>
                     </div>
                 }
                 else
