I changed how width and height work. THis might mess up some things, so sorry. It was needed.

--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -49,8 +49,8 @@
     margin-top: 2vh;
     margin-left: 2%;
     margin-bottom: 1vh;
-    width: @WidthPercent;
-    height: @HeightPercent;
+    width: @WidthStyle;
+    height: @HeightStyle;
     z-index: @ZIndex;    
     display: @DisplayStyle;
 </Styled>
