I changed how the TextBoxHeight and Width work.

--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -17,8 +17,8 @@
     background-color: @TextBoxBackColor;
     position: relative;
     left: @LeftStyle;
-    width: @TextBoxWidthPercent;
-    Height: @TextBoxHeightPercent;
+    width: @TextBoxWidthStyle2;
+    Height: @TextBoxHeightStyle;
     top: @TopStyle;
 </Styled>
 <Styled @bind-Classname="@CheckBoxStyle">
