I changed hopw Height & Width work.

--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -17,8 +17,8 @@
     background-color: @TextBoxBackColor;
     position: relative;
     left: @LeftStyle;
-    width: @TextBoxWidthStyle2;
-    Height: @TextBoxHeightStyle;
+    width: @WidthStyle;
+    Height: @HeightStyle;
     top: @TopStyle;
 </Styled>
 <Styled @bind-Classname="@CheckBoxStyle">
@@ -48,9 +48,7 @@
     font-family: Arial, Verdana;    
     margin-top: 2vh;
     margin-left: 2%;
-    margin-bottom: 1vh;
-    width: @WidthStyle;
-    height: @HeightStyle;
+    margin-bottom: 1vh;    
     z-index: @ZIndex;    
     display: @DisplayStyle;
 </Styled>
