--- a/Grid.razor
+++ b/Grid.razor
@@ -35,9 +35,10 @@
                 
                 if ((row.EditMode) && (!column.ReadOnly) && (column.EditMode))
                 {
-                    <div class="displayinline right128 up64">
-                    <ValidationComponent Name=column.ColumnName Width=column.Width Height=column.Height 
-                        RowId=row.Id ColumnId=column.Id ZIndex="@EditZIndex" SetFocusOnFirstRender=column.SetFocusOnFirstRender
+                    <div class="displayinline @column.ClassName">
+                    <ValidationComponent Name=column.ColumnName Unit="@column.Unit" Width=column.Width 
+                        Height=column.Height RowId=row.Id ColumnId=column.Id ZIndex="@EditZIndex"
+                        SetFocusOnFirstRender=column.SetFocusOnFirstRender ClassName="@column.EditorClassName"
                         Text="@column.EditorText"  Parent=this></ValidationComponent>
                     </div>
                 }
