I now use the column.ZIndex to the set the ZIndex in a grid instead of Grid.EditZIndex.

--- a/Grid.razor
+++ b/Grid.razor
@@ -37,7 +37,7 @@
                 {
                     <div class="displayinline @column.ClassName">
                     <ValidationComponent Name=column.ColumnName Unit="@column.Unit" Width=column.Width 
-                        Height=column.Height RowId=row.Id ColumnId=column.Id ZIndex="@EditZIndex"
+                        Height=column.Height RowId=row.Id ColumnId=column.Id ZIndex="@column.ZIndex"
                         SetFocusOnFirstRender=column.SetFocusOnFirstRender ClassName="@column.EditorClassName"
                         Text="@column.EditorText"  Parent=this></ValidationComponent>
                     </div>
