I added a down0 to the Grid.Column where it is displayed, so that the ZIndex will work.

--- a/Grid.razor
+++ b/Grid.razor
@@ -44,7 +44,7 @@
                 }
                 else
                 {
-                    <div class="@column.ClassName" @ondblclick="() => OnDoubleClick(row, column.ColumnNumber)">@column.ColumnText</div>
+                    <div class="down0 @column.ClassName" @ondblclick="() => OnDoubleClick(row, column.ColumnNumber)">@column.ColumnText</div>
                 }
             }
             </div>
