I added a LabelClass property so you can apply style to the label of ValidationComponents.

--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -56,7 +56,7 @@
 <div class="@ValidationControlStyle @ClassName">
     @if (ShowCaption)
     {
-        <span class="@LabelStyle">@Caption:</span>
+        <span class="@LabelStyle @LabelClassName">@Caption:</span>
     }
     @if (CheckBoxMode)
     {
