Working on the validation component still. Added a LabelBackgroundColor property.

--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -2,6 +2,7 @@
 
 <Styled @bind-Classname="@LabelStyle">
     color: @LabelColor;
+    background-color: @LabelBackgroundColor;
     display: @Display;
     width: @LabelWidthStyle;
     height: @HeightStyle;
@@ -53,6 +54,7 @@
     position: relative;    
     left: @LeftStyle;
     top: @TopStyle;
+    width: @WidthStyle;
 </Styled>
 
 <div class="@ValidationControlStyle">
