--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -8,7 +8,7 @@
     height: @HeightStyle;
     min-width: @LabelWidthStyle;
     text-align: right !important;
-    justify-content: right;
+    justify-content: left;
     position: relative;
     top: @TopStyle;    
     left: @LeftStyle;
@@ -19,6 +19,7 @@
     width: @WidthStyle;
     Height: @HeightStyle;    
     display: @Display;
+    justify-content: right;
 </Styled>
 <Styled @bind-Classname="@CheckBoxStyle">
     background-color: @TextBoxBackColor;
@@ -55,6 +56,7 @@
     left: @LeftStyle;
     top: @TopStyle;
     width: @WidthStyle;
+    background-color: @BackgroundColor;
 </Styled>
 
 <div class="@ValidationControlStyle">
