Checking in with the ValidationComponent floating left for the Label and TextBox.

--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -7,19 +7,19 @@
     width: @LabelWidthStyle;
     height: @HeightStyle;
     min-width: @LabelWidthStyle;
-    text-align: right !important;
-    justify-content: left;
+    text-align: right !important;    
     position: relative;
     top: @TopStyle;    
     left: @LeftStyle;
     font-size: @LabelFontSizeStyle;
+    float: left;
 </Styled>
 <Styled @bind-Classname="@TextBoxStyle">
     background-color: @TextBoxBackColor;   
     width: @WidthStyle;
     Height: @HeightStyle;    
-    display: @Display;
-    justify-content: right;
+    display: @Display;    
+    float: left;
 </Styled>
 <Styled @bind-Classname="@CheckBoxStyle">
     background-color: @TextBoxBackColor;
