--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -12,7 +12,7 @@
     float: left;
     width: @TextBoxWidthStyle;
     height: 100%;
-    background-color: red;
+    background-color: @TextBoxBackColor;
     margin-left: @MarginLeftStyle;
 </Styled>
 <Styled @bind-Classname="@Column3">
