--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -11,8 +11,7 @@
 <Styled @bind-Classname="@Column2">
     float: left;
     width: @TextBoxWidthStyle;
-    height: 100%;
-    background-color: @TextBoxBackColor;
+    height: 100%;    
     margin-left: @MarginLeftStyle;
 </Styled>
 <Styled @bind-Classname="@Column3">
@@ -50,7 +49,7 @@
     height: @HeightStyle;
     background-color: @BackgroundColor;
     z-index: @ZIndex;
-    clear:both;
+    clear:both;    
 </Styled>
 
 @if (Visible)
@@ -59,7 +58,7 @@
         @if (ShowCaption)
         {
             <div class="@Column1">
-                <div class="@LabelClassName">@Caption:</div>
+                <div class="@LabelClassName">@Caption</div>
             </div>
         }
         <div class="@Column2">
