--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -7,6 +7,8 @@
     height: 100%;
     background-color: @LabelBackgroundColor;
     color: @LabelColor;
+    font-size: @LabelFontSizeStyle;
+    text-align: right;
 </Styled>
 <Styled @bind-Classname="@Column2">
     float: left;
@@ -24,6 +26,7 @@
     background-color: @TextBoxBackColor;
     height: @HeightStyle;
     line-height: @HeightStyle;
+    font-size: @FontSizeStyle;
 </Styled>
 <Styled @bind-Classname="@CheckBoxStyle">
     background-color: @TextBoxBackColor;
