I added a VisibilityStyle property based on visible.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -3,7 +3,8 @@
 @using DataJuggler.Blazor.Components.Enumerations
 
 <Styled @bind-Classname="Grid">
-    display: @DisplayStyle;    
+    display: @DisplayStyle;
+    visibility: @VisibleStyle;
     height: @HeightStyle;
     min-width: @WidthStyle;
     width: @WidthStyle;
