--- a/ProgressBar.razor
+++ b/ProgressBar.razor
@@ -1,4 +1,5 @@
 ﻿
+
 <style>
     .textpercent
     {
@@ -11,7 +12,7 @@
 
 @if  (Visible)
 {  
-    <div class=@ProgressStyle>
+    <div>
         @if (OverrideThemeColorForText)
         {  
             <span class="textpercent">@PercentString</span>
