Checking in version 7.3.25

--- a/ImageButton.razor
+++ b/ImageButton.razor
@@ -49,8 +49,11 @@
     }
 </style>
 
+@if (Visible)
+{
 <div class="@ButtonContainerStyle">
-    <button class="imagebutton @ButtonStyle" @onclick="ButtonClicked" hidden="@Visible">
+    <button class="imagebutton @ButtonStyle" @onclick="ButtonClicked">
         <span class="@ButtonTextAlignStyle">@ButtonText</span>
     </button>    
 </div>
+}
