--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -3,8 +3,8 @@
 @using DataJuggler.Blazor.Components.Enumerations
 
 <Styled @bind-Classname="Grid">
-    display: inline-block;
-    height: @HeightStyle;
+    display: @DisplayStyle;
+    height: 16px;
     min-width: @WidthStyle;
     width: @WidthStyle;
     font-size: @TextSizeStyle;
@@ -52,7 +52,9 @@
 </Styled>
 
 
-<div class="@Grid" hidden="@Visible">
+@if (Visible)
+{ 
+<div class="@Grid">
     @if (ShowLabel)
     {
         <div class="@LabelStyle">@LabelText</div>
@@ -76,3 +78,4 @@
         }
     </div>
 </div>
+}
